/* -*- mode: protobuf; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*- */

/*
 * @(#)device.proto        
 *
 * Copyright (c) 2013 Argusat Limited
 * 10 Underwood Road,  Southampton.  UK
 * All rights reserved.
 *
 * This software is the confidential and proprietary information of 
 * Argusat Limited. ("Confidential Information").  You shall not
 * disclose such Confidential Information and shall use it only in
 * accordance with the terms of the license agreement you entered into
 * with Argusat Limited.
 */

package com.argusat.gjl.locator;

option java_package = "com.argusat.gjl.service.device";
option java_outer_classname = "DeviceProtoBuf";

message Device {

  enum OSType {
    MS_WINDOWS = 0;
    GOOGLE_ANDROID = 1;
    APPLE_IOS = 2;
  }

  required string deviceId = 1;
  required OSType osType = 2;
  required string osVersion = 3;
  required string pushToken = 4;
}

message RegisterDeviceRequest {
  required Device device = 1;
}

message RegisterDeviceResponse {

  enum ErrorCode {
    NONE = 0;
  }

  required ErrorCode responseCode = 1;
  required string responseMessage = 2;
  
}

